# my_portfolio

./: .gitignore  main.py  pyproject.toml
.djangotutorial/polls/: urls.py
.djangotutorial/polls/migrations/: 0001_initial.py
djangotutorial/: db.sqlite3
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/polls/: admin.py  models.py  tests.py  urls.py  views.py
djangotutorial/polls/migrations/: 0001_initial.py
djangotutorial/polls/templates/polls/: detail.html  index.html
djangotutorial/templates/admin/: base_site.html
my_project/: db.sqlite3
my_project/my_project/: settings.py  urls.py
my_project/sample_app/: models.py  views.py
my_project/sample_app/migrations/: 0001_initial.py
mybook/: db.sqlite3
mybook/cms/: admin.py  form.py  models.py  views.py
mybook/cms/migrations/: 0001_initial.py
mybook/cms/templates/cms/: base.html  book_edit.html  book_list.html  impression_list.html
mybook/mybook/: asgi.py  settings.py  urls.py  wsgi.py
test_ocr/: ocr_yomitoku.py
test_ocr/results/yomitoku/: output_0.html  output_0.json
