[project]
name = "my-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "django-bootstrap5>=25.2",
    "django-debug-toolbar>=6.0.0",
    "opencv-python>=4.12.0.88",
    "yomitoku>=0.9.4",
]
